(wip) add tests, index.js, update manifest

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
       "node": {
         "moduleDirectory": [
           "node_modules",
-          "src"
+          "lib"
         ]
       }
     }
