--- a/package.json
+++ b/package.json
@@ -6,14 +6,38 @@
   "directories": {
     "lib": "lib"
   },
-  "author": "Cris Mihalache <cris.m@bitfinex.com>",
+  "engines": {
+    "node": ">=6"
+  },
+  "author": "Cris Mihalache <cris.m@bitfinex.com> (https://www.bitfinex.com)",
   "license": "",
   "private": true,
+  "scripts": {
+    "lint": "standard",
+    "test": "npm run lint && npm run unit",
+    "unit": "NODE_ENV=test istanbul cover _mocha -- -R spec -b --recursive",
+    "test-without-coverage": "NODE_ENV=test mocha -R spec -b --recursive"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bitfinexcom/hf-algo.git"
+  },
+  "keywords": [
+    "honey framework",
+    "bitfinex",
+    "bitcoin",
+    "BTC"
+  ],
   "dependencies": {
+    "bfx-api-mock-srv": "https://github.com/bitfinexcom/bfx-api-mock-srv.git",
+    "bitfinex-api-node": "^2.0.0-beta.1",
     "bluebird": "^3.5.1",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "lodash.throttle": "^4.1.1"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "dotenv": "^6.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-standard": "^7.0.0",
@@ -23,6 +47,9 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.0.1",
     "faucet": "^0.0.1",
+    "istanbul": "^0.4.5",
+    "mocha": "^5.2.0",
+    "socks-proxy-agent": "^4.0.1",
     "tape": "^4.6.3",
     "tape-watch": "^2.3.0",
     "webpack": "^2.4.1",
