--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.0.1",
     "faucet": "^0.0.1",
-    "istanbul": "^0.4.5",
+    "istanbul": "^1.1.0-alpha.1",
     "mocha": "^5.2.0",
     "socks-proxy-agent": "^4.0.1",
     "tape": "^4.6.3",
