(manifest) add bfx-hf-indicators and managed candles plugin

--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "bfx-api-node-util": "bitfinexcom/bfx-api-node-util",
     "bfx-api-node-models": "bitfinexcom/bfx-api-node-models",
     "bfx-api-node-plugin-managed-ob": "bitfinexcom/bfx-api-node-plugin-managed-ob",
+    "bfx-api-node-plugin-managed-candles": "bitfinexcom/bfx-api-node-plugin-managed-candles",
     "bitfinex-api-node": "^2.0.0-beta.1",
+    "bfx-hf-indicators": "bitfinexcom/bfx-hf-indicators",
     "bluebird": "^3.5.1",
     "eventemitter2": "^5.0.1",
     "lodash": "^4.17.10",
