--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bitfinex-api-node": "^2.0.0-beta.1",
     "bfx-hf-indicators": "bitfinexcom/bfx-hf-indicators",
     "bfx-hf-util": "bitfinexcom/bfx-hf-util",
+    "bfx-hf-models": "bitfinexcom/bfx-hf-models",
     "bluebird": "^3.5.1",
     "eventemitter2": "^5.0.1",
     "lodash": "^4.17.10",
