--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bfx-hf-algo",
-  "version": "0.0.1",
-  "description": "HF algorithmic order module",
+  "version": "1.0.0",
+  "description": "HF Algorithmic Order Module",
   "main": "index.js",
   "directories": {
     "lib": "lib"
@@ -11,7 +11,6 @@
   },
   "author": "Cris Mihalache <cris.m@bitfinex.com> (https://www.bitfinex.com)",
   "license": "Apache-2.0",
-  "private": true,
   "scripts": {
     "lint": "standard",
     "test": "npm run lint && npm run unit",
@@ -39,15 +38,15 @@
   ],
   "dependencies": {
     "bfx-api-mock-srv": "bitfinexcom/bfx-api-mock-srv",
-    "bfx-api-node-core": "bitfinexcom/bfx-api-node-core",
-    "bfx-api-node-util": "bitfinexcom/bfx-api-node-util",
-    "bfx-api-node-models": "bitfinexcom/bfx-api-node-models",
-    "bfx-api-node-plugin-managed-ob": "bitfinexcom/bfx-api-node-plugin-managed-ob",
-    "bfx-api-node-plugin-managed-candles": "bitfinexcom/bfx-api-node-plugin-managed-candles",
-    "bitfinex-api-node": "^2.0.0-beta.1",
-    "bfx-hf-indicators": "bitfinexcom/bfx-hf-indicators",
-    "bfx-hf-util": "bitfinexcom/bfx-hf-util",
-    "bfx-hf-models": "bitfinexcom/bfx-hf-models",
+    "bfx-api-node-core": "^1.0.0",
+    "bfx-api-node-util": "^1.0.0",
+    "bfx-api-node-models": "^1.0.0",
+    "bfx-api-node-plugin-managed-ob": "^1.0.0",
+    "bfx-api-node-plugin-managed-candles": "^1.0.0",
+    "bitfinex-api-node": "^2.0.0",
+    "bfx-hf-indicators": "^1.0.0",
+    "bfx-hf-util": "^1.0.0",
+    "bfx-hf-models": "^1.0.0",
     "bluebird": "^3.5.1",
     "eventemitter2": "^5.0.1",
     "lodash": "^4.17.10",
