--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bfx-api-node-models": "^1.0.0",
     "bfx-api-node-plugin-managed-ob": "^1.0.0",
     "bfx-api-node-plugin-managed-candles": "^1.0.0",
+    "bfx-api-node-plugin-wd": "^1.0.0",
     "bitfinex-api-node": "^2.0.0",
     "bfx-hf-indicators": "^1.0.0",
     "bfx-hf-util": "^1.0.0",
