--- a/package.json
+++ b/package.json
@@ -44,46 +44,42 @@
     "BTC"
   ],
   "dependencies": {
-    "bfx-api-mock-srv": "bitfinexcom/bfx-api-mock-srv",
-    "bfx-api-node-core": "^1.0.0",
-    "bfx-api-node-models": "^1.0.0",
+    "bfx-api-mock-srv": "^1.0.0",
+    "bfx-api-node-core": "^1.1.0",
+    "bfx-api-node-models": "^1.0.12",
     "bfx-api-node-plugin-managed-candles": "^1.0.0",
     "bfx-api-node-plugin-managed-ob": "^1.0.0",
     "bfx-api-node-plugin-wd": "^1.0.0",
-    "bfx-api-node-util": "^1.0.1",
-    "bfx-hf-indicators": "^1.0.0",
-    "bfx-hf-models": "^2.0.0",
-    "bfx-hf-util": "^1.0.0",
-    "bitfinex-api-node": "^2.0.0",
-    "bluebird": "^3.5.1",
+    "bfx-api-node-util": "^1.0.2",
+    "bfx-hf-indicators": "^2.0.0",
+    "bfx-hf-models": "^2.1.0",
+    "bfx-hf-util": "^1.0.1",
+    "bitfinex-api-node": "^2.0.9",
+    "bluebird": "^3.5.5",
     "debug": "^4.1.1",
     "eventemitter2": "^5.0.1",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.15",
     "lodash.throttle": "^4.1.1",
     "lowdb": "^1.0.0",
     "p-iteration": "^1.1.7"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
+    "bfx-hf-ext-plugin-bitfinex": "^1.0.0",
+    "bfx-hf-models-adapter-lowdb": "^1.0.0",
+    "chai": "^4.2.0",
     "dotenv": "^6.0.0",
     "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
     "eslint-config-standard": "^7.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.0.1",
-    "faucet": "^0.0.1",
-    "istanbul": "^1.1.0-alpha.1",
+    "istanbul": "^0.4.5",
     "jsdoc-to-markdown": "^4.0.1",
-    "mocha": "^5.2.0",
+    "mocha": "^6.2.0",
     "socks-proxy-agent": "^4.0.1",
-    "tape": "^4.6.3",
-    "tape-watch": "^2.3.0",
-    "webpack": "^2.4.1",
-    "yargs": "6.6.0",
-    "bfx-hf-ext-plugin-bitfinex": "^1.0.0",
-    "bfx-hf-models-adapter-lowdb": "^1.0.0"
+    "standard": "^14.2.0",
+    "webpack": "^2.4.1"
   }
 }
