--- a/package.json
+++ b/package.json
@@ -45,17 +45,17 @@
     "BTC"
   ],
   "dependencies": {
-    "bfx-api-mock-srv": "git+http://github.com/bitfinexcom/bfx-api-mock-srv.git#semver:^1.0.0",
-    "bfx-api-node-core": "git+http://github.com/bitfinexcom/bfx-api-node-core.git#semver:^1.1.0",
-    "bfx-api-node-models": "git+http://github.com/bitfinexcom/bfx-api-node-models.git#semver:^1.0.12",
-    "bfx-api-node-plugin-managed-candles": "git+http://github.com/bitfinexcom/bfx-api-node-plugin-managed-candles.git#semver:^1.0.0",
-    "bfx-api-node-plugin-managed-ob": "git+http://github.com/bitfinexcom/bfx-api-node-plugin-managed-ob.git#semver:^1.0.0",
-    "bfx-api-node-plugin-wd": "git+http://github.com/bitfinexcom/bfx-api-node-plugin-wd.git#semver:^1.0.0",
-    "bfx-api-node-util": "git+http://github.com/bitfinexcom/bfx-api-node-util.git#semver:^1.0.2",
-    "bfx-hf-indicators": "git+http://github.com/bitfinexcom/bfx-hf-indicators.git#semver:^2.0.0",
-    "bfx-hf-models": "git+http://github.com/bitfinexcom/bfx-hf-models.git#semver:^2.1.0",
-    "bfx-hf-util": "git+http://github.com/bitfinexcom/bfx-hf-util.git#semver:^1.0.1",
-    "bitfinex-api-node": "git+http://github.com/bitfinexcom/bitfinex-api-node.git#semver:^2.0.9",
+    "bfx-api-mock-srv": "^1.0.0",
+    "bfx-api-node-core": "^1.1.0",
+    "bfx-api-node-models": "^1.0.12",
+    "bfx-api-node-plugin-managed-candles": "^1.0.0",
+    "bfx-api-node-plugin-managed-ob": "^1.0.0",
+    "bfx-api-node-plugin-wd": "^1.0.0",
+    "bfx-api-node-util": "^1.0.2",
+    "bfx-hf-indicators": "^2.0.0",
+    "bfx-hf-models": "^2.1.0",
+    "bfx-hf-util": "^1.0.1",
+    "bitfinex-api-node": "^2.0.9",
     "bluebird": "^3.5.5",
     "debug": "^4.1.1",
     "eventemitter2": "^5.0.1",
@@ -66,8 +66,8 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
-    "bfx-hf-ext-plugin-bitfinex": "git+http://github.com/bitfinexcom/bfx-hf-ext-plugin-bitfinex.git#semver:^1.0.0",
-    "bfx-hf-models-adapter-lowdb": "git+http://github.com/bitfinexcom/bfx-hf-models-adapter-lowdb.git#semver:^1.0.0",
+    "bfx-hf-ext-plugin-bitfinex": "^1.0.0",
+    "bfx-hf-models-adapter-lowdb": "^1.0.0",
     "chai": "^4.2.0",
     "dotenv": "^6.0.0",
     "eslint": "^4.19.1",
