(feature) add basic OCOCO docs

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "twap_docs": "node_modules/jsdoc-to-markdown/bin/cli.js lib/twap/index.js > docs/twap.md",
     "pingpong_docs": "node_modules/jsdoc-to-markdown/bin/cli.js lib/ping_pong/index.js > docs/ping_pong.md",
     "ad_docs": "node_modules/jsdoc-to-markdown/bin/cli.js lib/accumulate_distribute/index.js > docs/accumulate_distribute.md",
-    "docs": "npm run aohost_docs && npm run helpers_docs && npm run iceberg_docs && npm run twap_docs && npm run ad_docs && npm run macrossover_docs && npm run pingpong_docs"
+    "ococo_docs": "node_modules/jsdoc-to-markdown/bin/cli.js lib/ococo/index.js > docs/ococo.md",
+    "docs": "npm run aohost_docs && npm run helpers_docs && npm run iceberg_docs && npm run twap_docs && npm run ad_docs && npm run macrossover_docs && npm run pingpong_docs && npm run ococo_docs"
   },
   "repository": {
     "type": "git",
