--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "engines": {
     "node": ">=6"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test"
+    }
+  },
   "author": "Bitfinex",
   "contributors": [
     "Cris Mihalache <cris.m@bitfinex.com> (https://www.bitfinex.com)",
@@ -20,7 +25,7 @@
   "scripts": {
     "lint": "standard",
     "test": "npm run lint && npm run unit",
-    "unit": "DEBUG='bfx:hf:*' NODE_PATH=lib/ NODE_ENV=test istanbul cover _mocha -- -R spec -b --recursive",
+    "unit": "NODE_ENV=test NODE_PATH=lib/ nyc --check-coverage --lines 90 --branches 60 --functions 90 --statements 90 --reporter=lcov --reporter=html mocha -b --recursive",
     "test-without-coverage": "NODE_ENV=test mocha -R spec -b --recursive",
     "macrossover_docs": "node_modules/jsdoc-to-markdown/bin/cli.js lib/ma_crossover/index.js > docs/ma_crossover.md",
     "aohost_docs": "node_modules/jsdoc-to-markdown/bin/cli.js lib/ao_host.js > docs/ao_host.md",
@@ -77,9 +82,10 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.0.1",
-    "istanbul": "^0.4.5",
+    "husky": "^4.2.3",
     "jsdoc-to-markdown": "^4.0.1",
     "mocha": "^6.2.0",
+    "nyc": "^15.0.0",
     "socks-proxy-agent": "^4.0.1",
     "standard": "^14.2.0",
     "webpack": "^2.4.1"
