(refactor) standardize eslint config, fix resulting errors

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "engines": {
-    "node": ">=6"
+    "node": ">=8.3.0"
   },
   "husky": {
     "hooks": {
@@ -23,7 +23,7 @@
   ],
   "license": "Apache-2.0",
   "scripts": {
-    "lint": "standard",
+    "lint": "eslint lib/ examples/ test/ index.js",
     "test": "npm run lint && npm run unit",
     "unit": "NODE_ENV=test NODE_PATH=lib/ nyc --check-coverage --lines 90 --branches 60 --functions 90 --statements 90 --reporter=lcov --reporter=html mocha -b --recursive",
     "test-without-coverage": "NODE_ENV=test mocha -R spec -b --recursive",
@@ -80,7 +80,10 @@
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsdoc": "^22.0.0",
+    "eslint-plugin-lodash": "^6.0.0",
+    "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.2.3",
