--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "npm run lint && npm run unit",
     "unit": "NODE_ENV=test NODE_PATH=lib/ nyc --check-coverage --lines 90 --branches 60 --functions 90 --statements 90 --reporter=lcov --reporter=html mocha -b --recursive",
     "test-without-coverage": "NODE_ENV=test mocha -R spec -b --recursive",
-    "docs": "rm -rf docs && node_modules/.bin/jsdoc --configure .jsdoc.json --verbose"
+    "docs": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose"
   },
   "repository": {
     "type": "git",
@@ -57,6 +57,7 @@
     "bluebird": "^3.5.5",
     "debug": "^4.1.1",
     "eventemitter2": "^6.0.0",
+    "jsdoc-json": "^2.0.2",
     "lodash": "^4.17.15",
     "lodash.throttle": "^4.1.1",
     "lowdb": "^1.0.0",
