--- a/package.json
+++ b/package.json
@@ -3,16 +3,8 @@
   "version": "2.1.2",
   "description": "HF Algorithmic Order Module",
   "main": "index.js",
-  "directories": {
-    "lib": "lib"
-  },
   "engines": {
     "node": ">=8.3.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm test"
-    }
   },
   "author": "Bitfinex",
   "contributors": [
@@ -23,10 +15,9 @@
   ],
   "license": "Apache-2.0",
   "scripts": {
-    "lint": "eslint lib/ examples/ test/ index.js",
+    "lint": "standard lib/ examples/ test/ index.js",
     "test": "npm run lint && npm run unit",
-    "unit": "NODE_ENV=test NODE_PATH=lib/ nyc --check-coverage --lines 60 --branches 40 --functions 40 --statements 60 --reporter=lcov --reporter=html mocha -b --recursive",
-    "test-without-coverage": "NODE_ENV=test mocha -R spec -b --recursive",
+    "unit": "NODE_ENV=test mocha -R spec -b --recursive",
     "docs": "rm -rf docs && node_modules/.bin/jsdoc --configure .jsdoc.json --verbose"
   },
   "repository": {
@@ -43,49 +34,30 @@
     "BTC"
   ],
   "dependencies": {
-    "bfx-api-mock-srv": "^1.0.4",
     "bfx-api-node-core": "^1.1.8",
     "bfx-api-node-models": "^1.1.9",
-    "bfx-api-node-plugin-managed-candles": "^1.0.0",
-    "bfx-api-node-plugin-managed-ob": "^1.0.0",
-    "bfx-api-node-plugin-wd": "^1.0.3",
     "bfx-api-node-util": "^1.0.2",
     "bfx-hf-indicators": "^2.0.0",
     "bfx-hf-models": "^2.1.0",
     "bfx-hf-util": "^1.0.1",
-    "bitfinex-api-node": "^4.0.10",
     "bluebird": "^3.5.5",
     "debug": "^4.1.1",
-    "eventemitter2": "^6.0.0",
     "lodash": "^4.17.15",
-    "lodash.throttle": "^4.1.1",
-    "lowdb": "^1.0.0",
     "p-iteration": "^1.1.7"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
     "bfx-hf-ext-plugin-bitfinex": "^1.0.5",
     "bfx-hf-models-adapter-lowdb": "^1.0.0",
     "chai": "^4.2.0",
-    "docdash": "^1.2.0",
     "dotenv": "^8.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsdoc": "^22.0.0",
-    "eslint-plugin-lodash": "^6.0.0",
-    "eslint-plugin-mocha": "^6.3.0",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "husky": "^4.2.3",
     "jsdoc": "^3.6.3",
     "mocha": "^7.1.0",
-    "nyc": "^15.0.0",
     "sinon": "^9.0.0",
-    "socks-proxy-agent": "^5.0.0",
-    "standard": "^14.2.0",
-    "webpack": "^4.42.0"
+    "standard": "^14.2.0"
+  },
+  "standard": {
+    "ignore": [
+      "/docs/**/*.js"
+    ]
   }
 }
