--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "BTC"
   ],
   "dependencies": {
+    "@bitfinex/lib-js-util-math": "git+https://github.com/bitfinexcom/lib-js-util-math.git",
     "bfx-api-node-core": "^1.1.8",
     "bfx-api-node-models": "^1.1.9",
     "bfx-api-node-util": "^1.0.2",
