--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@bitfinex/lib-js-util-math": "git+https://github.com/bitfinexcom/lib-js-util-math.git",
     "bfx-api-node-core": "^1.1.8",
     "bfx-api-node-models": "^1.1.9",
+    "bfx-api-node-plugin-managed-candles": "^1.0.2",
+    "bfx-api-node-plugin-managed-ob": "^1.0.2",
+    "bfx-api-node-plugin-wd": "^1.0.4",
     "bfx-api-node-util": "^1.0.2",
     "bfx-hf-indicators": "^2.0.0",
     "bfx-hf-models": "^2.1.0",
