--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "lint": "standard",
     "test": "npm run lint && npm run unit",
-    "unit": "NODE_ENV=test mocha -R spec -b --recursive",
+    "unit": "NODE_ENV=test mocha -R spec -b --recursive test/lib",
+    "integration": "NODE_ENV=test mocha -R spec -b --recursive --timeout=60000 test/integration",
     "docs": "rm -rf docs && node_modules/.bin/jsdoc --configure .jsdoc.json --verbose",
     "benchmark": "clinic doctor --dest benchmarks/reports/$TARGET --on-port 'autocannon -d 30 localhost:$PORT' -- node --inspect ./benchmarks/$TARGET.js",
     "benchmark:visualize": "clinic doctor --visualize-only $REPORT",
@@ -65,7 +66,8 @@
     "open-cli": "^6.0.1",
     "restify": "^8.5.1",
     "sinon": "^9.0.0",
-    "standard": "^16.0.3"
+    "standard": "^16.0.3",
+    "ws": "^7.4.5"
   },
   "standard": {
     "ignore": [
