--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "dotenv": "^8.2.0",
     "jsdoc": "^3.6.3",
     "mocha": "^7.1.0",
+    "proxyquire": "^2.1.3",
     "restify": "^8.5.1",
     "sinon": "^9.0.0",
     "standard": "^16.0.3",
