moved hf depencencies to github versions

--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "bfx-api-node-plugin-managed-ob": "^1.0.2",
     "bfx-api-node-plugin-wd": "^1.0.4",
     "bfx-api-node-util": "^1.0.2",
-    "bfx-hf-indicators": "^2.0.8",
-    "bfx-hf-util": "^1.0.1",
+    "bfx-hf-indicators": "github:bitfinexcom/bfx-hf-indicators#v2.0.9",
+    "bfx-hf-util": "github:bitfinexcom/bfx-hf-util#v1.0.12",
     "bluebird": "^3.5.5",
     "debug": "^4.3.1",
     "flat-promise": "^1.0.2",
@@ -54,9 +54,9 @@
   },
   "devDependencies": {
     "autocannon": "^7.3.0",
-    "bfx-hf-ext-plugin-bitfinex": "^1.0.7",
-    "bfx-hf-models": "^2.1.0",
-    "bfx-hf-models-adapter-lowdb": "^1.0.0",
+    "bfx-hf-ext-plugin-bitfinex": "github:bitfinexcom/bfx-hf-ext-plugin-bitfinex#v1.0.9",
+    "bfx-hf-models": "github:bitfinexcom/bfx-hf-models#v2.3.3",
+    "bfx-hf-models-adapter-lowdb": "github:bitfinexcom/bfx-hf-models-adapter-lowdb#v1.0.4",
     "chai": "^4.2.0",
     "clinic": "^9.0.0",
     "docdash": "^1.2.0",
