--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
   ],
   "dependencies": {
     "@bitfinex/lib-js-util-math": "git+https://github.com/bitfinexcom/lib-js-util-math.git",
-    "bfx-api-node-core": "^1.5.2",
-    "bfx-api-node-models": "^1.1.9",
+    "bfx-api-node-core": "^1.5.3",
+    "bfx-api-node-models": "^1.4.1",
     "bfx-api-node-plugin-managed-candles": "^1.0.2",
-    "bfx-api-node-plugin-managed-ob": "^1.0.2",
+    "bfx-api-node-plugin-managed-ob": "^1.0.3",
     "bfx-api-node-plugin-wd": "^1.0.4",
     "bfx-api-node-util": "^1.0.2",
     "bfx-hf-indicators": "github:bitfinexcom/bfx-hf-indicators#v2.0.9",
@@ -54,9 +54,9 @@
   },
   "devDependencies": {
     "autocannon": "^7.3.0",
-    "bfx-hf-ext-plugin-bitfinex": "github:bitfinexcom/bfx-hf-ext-plugin-bitfinex#v1.0.10",
-    "bfx-hf-models": "github:bitfinexcom/bfx-hf-models#v2.3.3",
-    "bfx-hf-models-adapter-lowdb": "github:bitfinexcom/bfx-hf-models-adapter-lowdb#v1.0.4",
+    "bfx-hf-ext-plugin-bitfinex": "github:bitfinexcom/bfx-hf-ext-plugin-bitfinex#v1.0.11",
+    "bfx-hf-models": "git+https://github.com/bitfinexcom/bfx-hf-models.git#v2.4.0",
+    "bfx-hf-models-adapter-lowdb": "git+https://github.com/bitfinexcom/bfx-hf-models-adapter-lowdb.git#v1.0.5",
     "chai": "^4.2.0",
     "clinic": "^9.0.0",
     "docdash": "^1.2.0",
