--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
   ],
   "dependencies": {
     "@bitfinex/lib-js-util-math": "git+https://github.com/bitfinexcom/lib-js-util-math.git",
-    "bfx-api-node-core": "git+https://github.com/bitfinexcom/bfx-api-node-core.git#v1.5.6",
-    "bfx-api-node-models": "git+https://github.com/bitfinexcom/bfx-api-node-models.git#v1.6.2",
+    "bfx-api-node-core": "^1.5.8",
+    "bfx-api-node-models": "^1.6.2",
     "bfx-api-node-plugin-managed-candles": "^1.0.2",
     "bfx-api-node-plugin-managed-ob": "^1.0.3",
     "bfx-api-node-plugin-wd": "^1.0.4",
