--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "bfx-api-node-plugin-managed-candles": "^1.0.2",
     "bfx-api-node-plugin-managed-ob": "^1.0.3",
     "bfx-api-node-plugin-wd": "^1.0.4",
-    "bfx-api-node-rest": "git+https://github.com/bitfinexcom/bfx-api-node-rest.git#v4.6.0",
+    "bfx-api-node-rest": "^4.6.0",
     "bfx-api-node-util": "^1.0.2",
     "bfx-hf-indicators": "git+https://github.com/bitfinexcom/bfx-hf-indicators.git#v2.1.1",
     "bfx-hf-signals": "git+https://github.com/bitfinexcom/bfx-hf-signals.git#v1.0.0",
