--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,6 +2,8 @@ name: GitHub Actions Demo
 on: [push]
 jobs:
   Lint-and-Tests:
-    runs-on: docker://node:12-alpine
     steps:
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '12'
       - run: npm test
