--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,8 +2,11 @@ name: GitHub Actions Demo
 on: [push]
 jobs:
   Lint-and-Tests:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-node@v2
         with:
           node-version: '12'
+          cache: 'npm'
+      - run: npm install
       - run: npm test
