--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bfx-hf-algo",
+  "name": "@tarcisiozf/bfx-hf-algo",
   "version": "4.13.0",
   "description": "HF Algorithmic Order Module",
   "main": "index.js",
