--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,7 +1,8 @@
-name: GitHub Actions Demo
-on: [push]
+name: Pre-Merge
+on: [pull_request]
 jobs:
-  Lint-and-Tests:
+  lint_and_tests:
+    name: check lint and tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
