--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GIT_PERSONAL_ACCESS_TOKEN }}
       - uses: actions/setup-node@v2
         with:
           node-version: '12'
@@ -17,4 +19,7 @@ jobs:
       - run: npm publish --tags canary --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - run: git push --tags
+      - run: |
+        git config --global user.name 'Tarcisio Ferraz'
+        git config --global user.email 'tarcisiozf@users.noreply.github.com'
+        git push --tags
