--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tarcisiozf/bfx-hf-algo",
-  "version": "4.13.1-3",
+  "version": "4.14.0",
   "description": "HF Algorithmic Order Module",
   "main": "index.js",
   "engines": {
