--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "bfx-hf-signals": "git+https://github.com/bitfinexcom/bfx-hf-signals.git#v1.1.0",
     "bfx-hf-util": "github:bitfinexcom/bfx-hf-util#v1.0.12",
     "bluebird": "^3.5.5",
+    "check-unstable-deps": "git+https://github.com/tarcisiozf/check-unstable-deps.git",
     "debug": "^4.3.1",
     "flat-promise": "^1.0.2",
     "lodash": "^4.17.15"
