--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,10 +1,14 @@
 name: Pre-Merge
-on: [pull_request]
+on: [ pull_request ]
 jobs:
   lint_and_tests:
     name: check lint and tests
     runs-on: ubuntu-latest
     steps:
+      - uses: deepakputhraya/action-branch-name@master
+        with:
+          allowed_prefixes: 'feature,hotfix'
+          ignore: master,develop
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
