--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@tarcisiozf/bfx-hf-algo",
-  "version": "4.18.0",
+  "name": "bfx-hf-algo",
+  "version": "4.13.0",
   "description": "HF Algorithmic Order Module",
   "main": "index.js",
   "engines": {
