--- a/package.json
+++ b/package.json
@@ -55,10 +55,9 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
-    "autocannon": "^7.3.0",
-    "bfx-hf-ext-plugin-bitfinex": "git+https://github.com/bitfinexcom/bfx-hf-ext-plugin-bitfinex#v1.0.11",
-    "bfx-hf-models": "git+https://github.com/bitfinexcom/bfx-hf-models.git#v2.6.0",
-    "bfx-hf-models-adapter-lowdb": "git+https://github.com/bitfinexcom/bfx-hf-models-adapter-lowdb.git#v1.0.5",
+    "bfx-hf-ext-plugin-bitfinex": "git+https://github.com/tarcisiozf/bfx-hf-ext-plugin-bitfinex#update-models",
+    "bfx-hf-models": "git+https://github.com/bitfinexcom/bfx-hf-models.git#v4.0.1",
+    "bfx-hf-models-adapter-lowdb": "git+https://github.com/bitfinexcom/bfx-hf-models-adapter-lowdb.git#v1.0.6",
     "chai": "^4.2.0",
     "clinic": "^9.0.0",
     "docdash": "^1.2.0",
