--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
-    "bfx-hf-ext-plugin-bitfinex": "git+https://github.com/tarcisiozf/bfx-hf-ext-plugin-bitfinex#update-models",
+    "bfx-hf-ext-plugin-bitfinex": "git+https://github.com/bitfinexcom/bfx-hf-ext-plugin-bitfinex#v1.0.13",
     "bfx-hf-models": "git+https://github.com/bitfinexcom/bfx-hf-models.git#v4.0.1",
     "bfx-hf-models-adapter-lowdb": "git+https://github.com/bitfinexcom/bfx-hf-models-adapter-lowdb.git#v1.0.6",
     "chai": "^4.2.0",
